--- a/src/Components/SearchStocks/style.module.css
+++ b/src/Components/SearchStocks/style.module.css
@@ -3,6 +3,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .input{
@@ -22,6 +23,7 @@
     gap: 6px;
     padding: 10px;
     border-radius: 10px;
+    top:50px;
 }
 
 .item{
