--- a/src/Components/SearchStocks/style.module.css
+++ b/src/Components/SearchStocks/style.module.css
@@ -8,9 +8,9 @@
 
 .input{
     border: 1px solid #bb9e9e;
-    border-radius: 10px;
     padding: 10px;
-    outline: none;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 .autocomplete{
@@ -36,3 +36,23 @@
     cursor: pointer;
     background-color: beige;
 }
+
+.inputContainer{
+    display: flex;
+    gap: 6px;
+    align-items: center;
+    position: relative;
+}
+
+.close{
+    font-size: 21px;
+    cursor: pointer;
+    position: absolute;
+    right: -22px;
+    border: 1px solid grey;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 5px;
+    background-color: #bb9e9e;
+}
+
